--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
       }
       canvas {
         display: block;
+<canvas class="webgl"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+    <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.module.js",
+        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.152.0/examples/jsm/"
       }
-    </style>
-  </head>
-  <body>
+    }
     <script type="module" src="./main.js"></script>
   </body>
 </html>
