--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       }
       canvas {
         display: block;
-<canvas class="webgl"></canvas>
+      </style>
+  </head>
+<body>
+    <canvas class="webgl"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
     <script type="importmap">
     {
