--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <title>Penaso-Activity 12</title>
@@ -12,6 +13,15 @@
     </style>
   </head>
   <body>
+<canvas class="webgl"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+    <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.module.js",
+        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.152.0/examples/jsm/"
+      }
+    }
     <script type="module" src="./main.js"></script>
   </body>
 </html>
