--- a/index.html
+++ b/index.html
@@ -2,26 +2,17 @@
 <html>
   <head>
     <title>Penaso-Activity 12</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      canvas {
-        display: block;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <canvas class="webgl"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
-    <script type="importmap">
-    {
+    <script type="importmap"> {
       "imports": {
         "three": "https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.module.js",
         "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.152.0/examples/jsm/"
       }
-    }
+    }</script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
